# cropland-mapping

./: .gitattributes  .gitignore  README.md  cmap_msi.ipynb  pyproject.toml
data/: dataset_ca_19.hdf5
diagram/: diagram.tex
models/: best_model.pth
notebooks/: cmap_dataset.ipynb  cmap_msi.ipynb
src/: cmap_cnn.ipynb  cmap_dataset.ipynb  cmap_eda.ipynb  cmap_msi.ipynb  cmap_nn.ipynb  cmap_rgb.ipynb  crop_mapping.ipynb
src/visualizer/: visualizer.py
